--- a/carperta_css/lista_estilo.css
+++ b/carperta_css/lista_estilo.css
@@ -7,7 +7,7 @@ body {
     padding: 0;
 }
 li {
-    background: wheat;
+    background: #ff59a1;
     color: black;
     border: none;
     padding: 5px;
